# rimeac.lua

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_vc.bat  deps.install.bat  main.cpp  msvc-latest.bat  rime_api_console.lua  script.lua  script_ext.lua  xmake.lua
.github/workflows/: ci.yml
